changed to row per file

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ protocol_id
 project_description
 
 [ORDER]
-bundle_id
+folder
 ^.*.file_name
 ^sequence_file.*
 ^analysis_file.*
@@ -19,3 +19,7 @@ bundle_id
 ^cell_suspension.*
 ^.*protocol.*
 ^project.*
+
+;[LAYOUT]
+;# single_column, multicolumn, row_per_file
+;layout = row_per_file
