key on file name

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,13 @@ contributors
 publications
 protocol_id
 project_description
+file_format
+file_name
 
 [ORDER]
 folder
-^.*.file_name
+^file_name
+^file_format
 ^sequence_file.*
 ^analysis_file.*
 ^donor_organism.*
